--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,17 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="blocks.css">
-      <title>Document</title>
+      <title>Campus Navigation:DevOps</title>
+      <link rel="icon" href="{{ url_for('static', filename='images/vvitlogo.jpg') }}" type="image/jpg">
       <style>
+        @import url("https://pro.fontawesome.com/releases/v6.0.0-beta1/css/all.css");
+@import url("https://fonts.googleapis.com/css2?family=Exo+2:wght@300;500;700&display=swap");
 
+        *{
+          box-sizing: border-box;
+          margin: 0px;
+          padding: 0px;
+        }
           .header {
               color: black;
               padding: 10px;
@@ -29,95 +37,7 @@
               margin-right: 10px; /* Adjust as needed */
           }
 
-          .menu-toggle {
-              cursor: pointer;
-              display: block;
-              width: 30px;
-              height: 30px;
-              position: relative;
-          }
           
-          .menu-toggle span {
-              display: block;
-              width: 100%;
-              height: 5px;
-              background-color: black;
-              margin: 5px 0;
-              transition: transform 0.3s, opacity 0.3s;
-          }
-
-          .menu-toggle.open span:first-child {
-              transform: rotate(45deg) translate(5px, 5px);
-          }
-          
-          .menu-toggle.open span:nth-child(2) {
-              opacity: 0;
-          }
-          
-          .menu-toggle.open span:last-child {
-              transform: rotate(-45deg) translate(5px, -5px);
-          }
-
-          .nav {
-              display: none;
-              position: absolute;
-              top: 50px;
-              right: 0;
-              background-color: whitesmoke;
-              padding: 10px;
-          }
-          
-          .nav.active {
-              display: block;
-          }
-          
-          .nav ul {
-              list-style: none;
-              padding: 0;
-              margin: 0;
-          }
-          
-          .nav ul li {
-              position: relative;
-              margin-bottom: 10px;
-          }
-          
-          .nav ul li a {
-              color: black;
-              text-decoration: none;
-              font-size: 18px;
-              transition: color 0.3s;
-          }
-          
-          .nav ul li ul {
-              display: none;
-              position: absolute;
-              top: 0;
-              right: 100%;
-              background-color: white3;
-              border-radius: 5px;
-          }
-          
-          .nav ul li:hover ul {
-              display: block;
-          }
-          
-          .nav ul li ul li {
-              width: 100%;
-          }
-          
-          .nav ul li ul li a {
-              padding: 10px 20px;
-          }
-
-          .nav ul li a:hover {
-              color: #eca5a5;
-          }
-
-          .nav ul li ul li a:hover {
-              background-color: #555;
-          }
-
           .buttonstest {
               display:inline-flex;
               align-items: center;
@@ -210,8 +130,7 @@ ol li .descr { font-size: 0.8rem; font-weight: 300 }
 .credits a { color: var(--color) }
 
 
-.header{
-    position: fixed;
+.header{ 
     top: 0;left: 0;right: 0;
     z-index: 1000;
     display: flex;
@@ -219,6 +138,7 @@ ol li .descr { font-size: 0.8rem; font-weight: 300 }
     justify-content: space-between;
     padding: 2rem 9%;
     background:none;
+    height:20vh;
 }
 
 .header .logo{
@@ -259,86 +179,36 @@ ol li .descr { font-size: 0.8rem; font-weight: 300 }
     align-items: center;
     justify-content: space-between;
 }
- 
+.abouticon {
+  font-size: 2rem;
+}
+.size{
+  font-size: 2rem;
+}
+
+@media only screen and (max-width: 1000px) {
+  .size{
+    font-size: 1rem;
+  }
+}
       </style>
   </head>
   
-  <body>
-    <center>
-      <header class="header" styele="border:2px solid">
+  <body >
+    <div>
+      <header class="header"  >
         <div>
           <img onclick="return redirectToIndex();" src="{{ url_for('static', filename='images/vvitlogo.jpg') }}" class="logo">
 
         </div>
-        <h1>QR CAMPUS GUIDE - DEVOPS OPTIMIZED NAVIGATION</h1>
-        <div class="menu-toggle" id="mobile-menu">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-        <nav class="nav" id="nav">
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <li>
-              <a href="#">Block A</a>
-              <ul>
-                <li><a href="A_Floor1.html">Floor1</a></li>
-                <li><a href="#">Floor2</a></li>
-                <li><a href="#">Floor3</a></li>
-                <li><a href="#">Floor4</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="#">Block B</a>
-              <ul>
-                <li><a href="#">Floor1</a></li>
-                <li><a href="#">Floor2</a></li>
-                <li><a href="#">Floor3</a></li>
-                <li><a href="#">Floor4</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="#">Block C</a>
-              <ul>
-                <li><a href="#">Floor1</a></li>
-                <li><a href="#">Floor2</a></li>
-                <li><a href="#">Floor3</a></li>
-                <li><a href="#">Floor4</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="#">Block D</a>
-              <ul>
-                <li><a href="#">Floor1</a></li>
-                <li><a href="#">Floor2</a></li>
-                <li><a href="#">Floor3</a></li>
-                <li><a href="#">Floor4</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="#">Central Block</a>
-              <ul>
-                <li><a href="#">Floor1</a></li>
-                <li><a href="#">Floor2</a></li>
-                <li><a href="#">Floor3</a></li>
-                <li><a href="#">Floor4</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="#">Siemens Block</a>
-              <ul>
-                <li><a href="#">Floor1</a></li>
-                <li><a href="#">Floor2</a></li>
-                <li><a href="#">Floor3</a></li>
-                <li><a href="#">Floor4</a></li>
-              </ul>
-            </li>
-          </ul>
-        </nav>
+        <div>
+        <p class="size">QR CAMPUS GUIDE - DEVOPS OPTIMIZED NAVIGATION</p>
+      </div>
+        <div class="abouticon" ><a href="/about" style="color: black;"><i class="fas fa-info-circle"></i></a></div>
       </header>
-    </center>
+    </div>
 <br>
+<br><br>
     <div class="buttonstest">
       <input type="radio" id="option1" name="options" value="option1" checked />
       <label for="option1">Google Maps</label><br>
