--- a/templates/index.html
+++ b/templates/index.html
@@ -556,7 +556,7 @@ ol li .descr { font-size: 0.8rem; font-weight: 300 }
 
                 // Construct the Google Maps URL with current location as source and destination address
                 var googleMapsUrl =
-                  "https://www.google.com/maps/dir/?api=1&origin=" +
+                  "http://www.google.com/maps/dir/?api=1&origin=" +
                   latitude +
                   "," +
                   longitude +
@@ -568,7 +568,7 @@ ol li .descr { font-size: 0.8rem; font-weight: 300 }
               },
               function () {
                 // Handle errors if geolocation fails
-                alert("Error: The Geolocation service failed.");
+                alert("Error: The Geolocation service failed."+googleMapsUrl);
               }
             );
           } else {
